style: add size and color variables update app layout and global style

--- a/index.html
+++ b/index.html
@@ -1,115 +1,60 @@
 <!doctype html>
 <html lang="en">
-
   <head>
-    <meta charset="UTF-8">
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    >
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- === SEO Meta Tags === -->
     <title>Todo App – Organize Your Tasks with React + TypeScript</title>
     <meta
       name="description"
       content="Boost your productivity with this modern Todo app built using React, TypeScript, and Vite. Easily manage, complete, and track your daily tasks."
-    >
-    <meta
-      name="author"
-      content="Your Name"
-    >
+    />
+    <meta name="author" content="Your Name" />
     <meta
       name="keywords"
       content="Todo App, Task Manager, React Todo, TypeScript App, Productivity Tool, Vite, Frontend Project"
-    >
-    <meta
-      name="robots"
-      content="index, follow"
-    >
-    <meta
-      name="theme-color"
-      content="#ffffff"
-    >
+    />
+    <meta name="robots" content="index, follow" />
+    <meta name="theme-color" content="#ffffff" />
 
     <!-- === Open Graph for Social Sharing === -->
-    <meta
-      property="og:title"
-      content="Todo App – Built with React & TypeScript"
-    >
+    <meta property="og:title" content="Todo App – Built with React & TypeScript" />
     <meta
       property="og:description"
       content="Organize and track your tasks with this user-friendly Todo application. Built with modern frontend tools."
-    >
-    <meta
-      property="og:type"
-      content="website"
-    >
-    <meta
-      property="og:url"
-      content="https://yourdomain.com"
-    >
-    <meta
-      property="og:image"
-      content="https://yourdomain.com/og-image.png"
-    >
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://yourdomain.com" />
+    <meta property="og:image" content="https://yourdomain.com/og-image.png" />
 
     <!-- === Twitter Cards === -->
-    <meta
-      name="twitter:card"
-      content="summary_large_image"
-    >
-    <meta
-      name="twitter:title"
-      content="Todo App – Built with React & TypeScript"
-    >
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Todo App – Built with React & TypeScript" />
     <meta
       name="twitter:description"
       content="Easily manage your daily tasks with this modern Todo app."
-    >
-    <meta
-      name="twitter:image"
-      content="https://yourdomain.com/og-image.png"
-    >
+    />
+    <meta name="twitter:image" content="https://yourdomain.com/og-image.png" />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      rel="preconnect"
-      href="https://fonts.googleapis.com"
-    >
-    <link
-      rel="preconnect"
-      href="https://fonts.gstatic.com"
-      crossorigin
-    >
-    <link
-      rel="preload"
-      as="style"
-      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Fira+Sans&family=Lora&display=swap"
-    >
-    <link
-      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Fira+Sans&family=Lora&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Fira+Mono:wght@400;500;700&family=Karla:ital,wght@0,200..800;1,200..800&family=Lora:ital,wght@0,400..700;1,400..700&display=swap"
       rel="stylesheet"
-    >
-
+    />
     <!-- === Icon Fonts === -->
     <link
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded"
       rel="stylesheet"
-    >
+    />
 
     <!-- === Favicon === -->
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="/vite.svg"
-    >
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   </head>
 
   <body>
-    <div id="root"></div>
-    <script
-      type="module"
-      src="/src/main.tsx"
-    ></script>
+    <div id="root" class="app"></div>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
-
 </html>
